# projectcarfcynepic

./: .env.example  .gitignore  AGENTS.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEV_REFERENCE.md  Debugging AI Suggestions.md  Dockerfile  HANDOFF.md  IP_CLASSIFICATION.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  carf_benchmarking_strategy.md  docker-compose.yml  firebase.json  improvements.md  pyproject.toml  research.md  start_backend.bat  start_dashboard.bat  supply_chain_resilience.csv  test_carf.py  test_failures.txt
.agent/workflows/: dev-server.md  test-and-lint.md
.github/workflows/: ci.yml  deepeval.yml
benchmarks/: README.md  __init__.py
benchmarks/baselines/: baseline_results.jsonl  baseline_results.summary.json  baseline_router.json  benchmark_hallucination_scale.py  benchmark_hallucination_scale_results.json  raw_llm_baseline.py
benchmarks/reports/: BENCHMARK_REPORT.md  INDUSTRY_BENCHMARK_RESEARCH_2025_2026.md  benchmark_clear.py  benchmark_clear_results.json  benchmark_manifest.schema.json  benchmark_report.json  benchmark_report.txt  check_result_evidence.py  generate_report.py  realism.py  realism_manifest.json  unified_report.json  unified_report.txt
benchmarks/use_cases/: benchmark_e2e.py  e2e_results.json
carf-cockpit/: Dockerfile  index.html  lint_errors.txt  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
carf-cockpit/src/: App.tsx  (+2 more)
config/: README.md  agents.yaml  policies.yaml  prompts.yaml
debugging_screenshots/: DEBUGGING.txt
demo/: README.md  scenarios.json
docs/: BENCHMARK_RE_EVALUATION_PLAN.md  C3AN_vs_CARF_Analysis.md  CARF UI Development.md  CARF_RSI_ANALYSIS.md  CARF_UIX_INTERACTION_GUIDELINES.md  CAUSAL_NEUROSYMBOLIC_RESEARCH_EVALUATION.md  CYNEPIC_CAPABILITY_ANALYSIS.md  DATA_LAYER.md  DEMO_WALKTHROUGH.md  DEV_PRACTICES_AND_LIVING_DOCS.md  END_TO_END_CONTEXT_FLOW.md  END_USER_TESTING_GUIDE.md  EVALUATION_FRAMEWORK.md  FUTURE_ROADMAP.md  GBR_USE_CASE_PLAN.md  GITNEXUS_ANALYSIS.md  GOVERNANCE_MATURITY_FUTURE_POTENTIAL.md  H_NEURONS_INTEGRATION_EVALUATION.md  INTEGRATION_GUIDE.md  INTELLECTUAL_PROPERTY.md  LLM_AGENTIC_STRATEGY.md  OPA_POLICY.md  PHASE17_ARCHITECTURE.md  PRD.md  QUICKSTART.md  RESEARCH_TLA_PLUS_APPLICATIONS.md  RFC_UIX_001_SCENARIO_REGISTRY.md  RFC_UIX_002_DATA_ONBOARDING.md  ROBUSTNESS_IMPLEMENTATION_SUMMARY.md  ROUTER_TRAINING.md  SECURITY_GUIDELINES.md  SELF_HEALING_ARCHITECTURE.md  SOLUTION_VISION.md  SOTA_IMPROVEMENT_ROADMAP.md  UIX_EVALUATION_REPORT.md  UI_UIX.md  UI_UIX_CURRENT_STREAMLIT.md  UI_UIX_VISION_REACT.md  WALKTHROUGH.md  project_structure_best_practices.md
modeltraining/: router_training_colab.ipynb  test.ipynb
notebooks/: 01_quickstart.ipynb  02_causal_analysis.ipynb  03_bayesian_exploration.ipynb
scripts/: evaluate_router_model.py  generate_all_scenario_data.py  generate_chain_data.py  generate_oracle_training_data.py  generate_router_training_data.py  migrate_to_cloud_sql.py  oracle_training_results.json  publish_demo_event.py  retrain_router_from_feedback.py  seed_demo.py  test_carf.py  train_oracle_models.py  train_router_model.py  verify_policies.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py
tla_specs/: EscalationProtocol.tla  README.md  StateGraph.tla
(+434 files in other folders)
